--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -21,9 +21,7 @@
                 <a class="navbar-brand" href="#">
                     <img src="../assets/images/LogoAmazingEvents.png" class="img-fluid" alt="Logo Amazing Events">
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -57,7 +55,10 @@
     </header>
 
     <main>
-        <form class="container-fluid w-50 p-3">
+        <form class="contactForm container-fluid w-50 p-3 mt-5 mb-5 rounded-4 bg-dark bg-gradient text-white">
+            <div class="icon text-center">
+                <i class="bi bi-envelope-at"></i>
+            </div>
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Name</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
@@ -66,15 +67,14 @@
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Email address</label>
                 <input type="email" class="form-control" id="exampleInputEmail2" aria-describedby="emailHelp">
-                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                <div id="emailHelp" class="form-text text-white">We'll never share your email with anyone else.</div>
             </div>
             <div class="mb-3">
                 <label for="floatingTextarea2" class="form-label">Message</label>
-                <textarea class="form-control" placeholder="Leave a message here" id="floatingTextarea2"
-                    style="height: 100px"></textarea>
+                <textarea class="form-control" placeholder="Leave a message here" id="floatingTextarea2" style="height: 100px"></textarea>
             </div>
 
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-danger">Submit</button>
         </form>
     </main>
 
@@ -86,33 +86,27 @@
                 <div class="text-start p-3 text-white">
                     <div>
                         <!-- Facebook -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #3b5998" href="#!"
-                            role="button"><i class="bi bi-facebook"></i>
+                        <a class="btn text-white btn-floating m-1" style="background-color: #3b5998" href="#!" role="button"><i class="bi bi-facebook"></i>
                         </a>
 
                         <!-- Twitter -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #55acee" href="#!"
-                            role="button"><i class="bi bi-twitter"></i>
+                        <a class="btn text-white btn-floating m-1" style="background-color: #55acee" href="#!" role="button"><i class="bi bi-twitter"></i>
                         </a>
 
                         <!-- Google -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #dd4b39" href="#!"
-                            role="button"><i class="bi bi-google"></i>
+                        <a class="btn text-white btn-floating m-1" style="background-color: #dd4b39" href="#!" role="button"><i class="bi bi-google"></i>
                         </a>
 
                         <!-- Instagram -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac" href="#!"
-                            role="button"><i class="bi bi-instagram"></i>
+                        <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac" href="#!" role="button"><i class="bi bi-instagram"></i>
                         </a>
 
                         <!-- Linkedin -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #0082ca" href="#!"
-                            role="button"><i class="bi bi-linkedin"></i>
+                        <a class="btn text-white btn-floating m-1" style="background-color: #0082ca" href="#!" role="button"><i class="bi bi-linkedin"></i>
                         </a>
 
                         <!-- Github -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #333333" href="#!"
-                            role="button"><i class="bi bi-github"></i>
+                        <a class="btn text-white btn-floating m-1" style="background-color: #333333" href="#!" role="button"><i class="bi bi-github"></i>
                         </a>
                     </div>
                     © 2023
@@ -122,9 +116,7 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 
 </html>
