--- a/src/pages/details.html
+++ b/src/pages/details.html
@@ -60,17 +60,13 @@
             <div class="col-lg-6">
                 <div class="card">
                     <div class="row g-0">
-                        <div class="col-6 col-md-5">
-                            <img src="../assets/images/Maraton3.jpg" class="card-img img-fluid rounded-start" alt="image card details">
+                        <div class="col-6 col-md-5" id="image">
+                            
                         </div>
                         <div class="col-6 col-md-7">
                             <div class="card-body d-flex flex-column">
-                                <div class="h-100">
-                                    <h3 class="card-title">Subtitle</h3>
-                                    <h2 class="card-title">Text</h2>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero ad suscipit, quidem fuga voluptate voluptates ipsum. Minima nam provident, nobis illum nostrum nihil incidunt suscipit natus eos animi quo aut adipisci
-                                        quibusdam ratione odit totam.</p>
-                                    <h4 class="card-title mb-3"><strong>Emphasis</strong></h4>
+                                <div class="h-100" id="details_card">
+                                   
                                 </div>
                                 <div class="test">
                                     <button type="button" class="btn btn-dark">Click here!</button>
@@ -82,8 +78,6 @@
             </div>
         </div>
     </div>
-
-
     <footer class="bg-light text-center text-white">
         <!-- Grid container -->
         <div class="container p-12 pb-0">
@@ -121,6 +115,15 @@
             <!-- div: Social media -->
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+    crossorigin="anonymous"></script>
+
+  <script src="../lib/Js-page2.js" type="text/javascript"></script>
+
+<script>
+
+</script>
 </body>
 
 </html>
