--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -12,6 +12,11 @@
   <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="../css/styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
+
+
 </head>
 
 <body>
@@ -94,42 +99,38 @@
     </div>
   </div>
 
-  <div class="cards-container">
-    <div class="card" style="width: 18rem">
-      <img src="../assets/images/Conciertodemusica1.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Title</h5>
-        <p class="card-text">Description text</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+  <div class="container-fluid card-body">
+
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators" id="slider">
+
       </div>
-    </div>
-    <div class="card" style="width: 18rem">
-      <img src="../assets/images/Cine7.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Title</h5>
-        <p class="card-text">Description text</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div class="carousel-inner">
+        <div class="carousel-item active" style="height: 500px;">
+          <img src="../assets/images/fotoprueba1.jpeg" class="d-block w-100" alt="...">
+        </div>
+
+        <div id="cards">
+
+        </div>
+
       </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-    <div class="card" style="width: 18rem">
-      <img src="../assets/images/Feriadecomidas7.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Title</h5>
-        <p class="card-text">Description text</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-    <div class="card" style="width: 18rem">
-      <img src="../assets/images/Maraton3.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Title</h5>
-        <p class="card-text">Description text</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
+
   </div>
 
-  <footer class="bg-light text-center text-white">
+  <br>
+  <footer class="footer bg-light text-center text-white">
     <!-- Grid container -->
     <div class="container p-12 pb-0">
       <!-- Section: Social media -->
@@ -171,7 +172,14 @@
       </div>
       <!-- Section: Social media -->
     </div>
+
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+      crossorigin="anonymous"></script>
+
+    <script src="../lib/Js-page1.js" type="text/javascript"></script>
+
 </body>
 
 </html>
