--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -61,7 +61,46 @@
       </div>
     </nav>
   </header>
-
+<div class="container-fluid" style="height: 250px;">
+  <div class="row">
+  <div id="carouselExampleIndicators"class="carousel slide" data-bs-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
+      <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
+      <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="../assets/images/eventos ejecutivos.jpg" class="d-table" alt="Imagen 1">
+        <div class="carousel-caption top-0 mt-4 d-none d-md-block">
+          <p class="display-1 fw-bolder text-capitalize mt-5 text-warning" >home</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="../assets/images/eventos musicales.jpg" class="d-table" alt="Imagen 2">
+        <div class="carousel-caption top-0 mt-4 d-none d-md-block">
+          <p class="display-1 fw-bolder text-capitalize mt-5 text-warning ">home</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="../assets/images/eventos para bodas.jpg" class="d-table" alt="Imagen 3">
+        <div class="carousel-caption top-0 mt-4 d-none d-md-block">
+          <p class="display-1 fw-bolder text-capitalize mt-5 text-warning ">home</p>
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Anterior</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Siguiente</span>
+    </a>
+  </div>
+</div>
+</div>
+  <div>
   <div class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <div class="collapse navbar-collapse container-category" id="navbarSupportedContent2">
@@ -130,40 +169,40 @@
   </div>
 
   <br>
-  <footer class="footer bg-light text-center text-white">
+  <footer class="footer bg-light text-center text-white" >
     <!-- Grid container -->
-    <div class="container p-12 pb-0">
+    <div class="p-12 pb-0" class="container1">
       <!-- Section: Social media -->
       <div class="mb-4 bg-secondary bg-opacity-75">
         <div class="text-start p-3 text-white">
           <div>
             <!-- Facebook -->
-            <a class="btn text-white btn-floating m-1" style="background-color: #3b5998" href="#!" role="button"><i
+            <a class="btn text-white btn-floating m-1" style="background-color: #3b5998" href="https://es-la.facebook.com/" role="button"><i
                 class="bi bi-facebook"></i>
             </a>
 
             <!-- Twitter -->
-            <a class="btn text-white btn-floating m-1" style="background-color: #55acee" href="#!" role="button"><i
+            <a class="btn text-white btn-floating m-1" style="background-color: #55acee" href="https://twitter.com/?lang=es" role="button"><i
                 class="bi bi-twitter"></i>
             </a>
 
             <!-- Google -->
-            <a class="btn text-white btn-floating m-1" style="background-color: #dd4b39" href="#!" role="button"><i
+            <a class="btn text-white btn-floating m-1" style="background-color: #dd4b39" href="https://www.google.com/?hl=es" role="button"><i
                 class="bi bi-google"></i>
             </a>
 
             <!-- Instagram -->
-            <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac" href="#!" role="button"><i
+            <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac" href="https://www.instagram.com/" role="button"><i
                 class="bi bi-instagram"></i>
             </a>
 
             <!-- Linkedin -->
-            <a class="btn text-white btn-floating m-1" style="background-color: #0082ca" href="#!" role="button"><i
+            <a class="btn text-white btn-floating m-1" style="background-color: #0082ca" href="https://co.linkedin.com/" role="button"><i
                 class="bi bi-linkedin"></i>
             </a>
 
             <!-- Github -->
-            <a class="btn text-white btn-floating m-1" style="background-color: #333333" href="#!" role="button"><i
+            <a class="btn text-white btn-floating m-1" style="background-color: #333333" href="https://github.com/" role="button"><i
                 class="bi bi-github"></i>
             </a>
           </div>
@@ -181,5 +220,4 @@
     <script src="../lib/Js-page1.js" type="text/javascript"></script>
 
 </body>
-
 </html>
