--- a/src/pages/past-events.html
+++ b/src/pages/past-events.html
@@ -10,8 +10,12 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
   <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" >
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="../css/styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
+
 </head>
 
 <body>
@@ -56,6 +60,42 @@
       </div>
     </nav>
   </header>
+  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
+      <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
+      <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="../assets/images/eventos ejecutivos.jpg" class="d-table" alt="Imagen 1">
+        <div class="carousel-caption top-0 mt-4 d-none d-md-block">
+          <p class="display-1 fw-bolder text-capitalize mt-5 text-warning ">past event</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="../assets/images/eventos musicales.jpg" class="d-table" alt="Imagen 2">
+        <div class="carousel-caption top-0 mt-4 d-none d-md-block">
+          <p class="display-1 fw-bolder text-capitalize mt-5 text-warning ">past events</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="../assets/images/eventos para bodas.jpg" class="d-table" alt="Imagen 3">
+        <div class="carousel-caption top-0 mt-4 d-none d-md-block">
+          <p class="display-1 fw-bolder text-capitalize mt-5 text-warning ">past events</p>
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Anterior</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Siguiente</span>
+    </a>
+  </div>
+  <div>
   <div class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <div class="collapse navbar-collapse container-category" id="navbarSupportedConten2">
@@ -170,6 +210,10 @@
       <!-- div: Social media -->
     </div>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+      crossorigin="anonymous"></script>
+  
 </body>
 
 </html>
