--- a/src/pages/stats.html
+++ b/src/pages/stats.html
@@ -56,7 +56,42 @@
             </div>
           </nav>
     </header>
-
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
+          <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
+          <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../assets/images/eventos ejecutivos.jpg" class="d-table" alt="Imagen 1">
+            <div class="carousel-caption top-0 mt-4 d-none d-md-block">
+              <p class="display-1 fw-bolder text-capitalize mt-5 text-warning ">stats</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="../assets/images/eventos musicales.jpg" class="d-table" alt="Imagen 2">
+            <div class="carousel-caption top-0 mt-4 d-none d-md-block">
+              <p class="display-1 fw-bolder text-capitalize mt-5 text-warning ">stats</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="../assets/images/eventos para bodas.jpg" class="d-table" alt="Imagen 3">
+            <div class="carousel-caption top-0 mt-4 d-none d-md-block">
+              <p class="display-1 fw-bolder text-capitalize mt-5 text-warning ">stats</p>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Anterior</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Siguiente</span>
+        </a>
+      </div>
+      <div>
     <div class="container mt-3 mb-2">
         <div class="row">
             <div class="col-md-1"></div>
@@ -234,6 +269,9 @@
 
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
