--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="../css/styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 
 
 </head>
@@ -69,7 +69,7 @@
           <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
           <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
         </ol>
-        <div class="carousel-inner" >
+        <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="img_event1">
             </div>
@@ -144,86 +144,168 @@
     </div>
   </div>
 
-    <div class="container-fluid card-body">
+  <!-- Swiper -->
+  <!-- Swiper -->
+  <div class="container">
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-container mySwiper">
 
-      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators" id="slider">
-
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active" style="height: 500px;">
-            <img src="../assets/images/fotoprueba1.jpeg" class="d-block w-100" alt="...">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <div class="row">
+            <div class="col-lg-12 col-sm-12">
+              <img src="../assets/images/eventos_ejecutivos.jpg" alt="">
+              <div class="card-description">
+                <div class="card-title">
+                  <h4>Descripción</h4>
+                </div>
+                <div class="card-text">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum enim possimus dolorum non,
+                    modi
+                    sunt ips.</p>
+                </div>
+                <div class="card-link">
+                  <a href="#">Ver más</a>
+                </div>
+              </div>
+            </div>
           </div>
-
-          <div id="cards">
-
-          </div>
-
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-          data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-          data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+        <div class="swiper-slide">
+          <div class="row">
+            <div class="col-lg-12 col-sm-12">
+              <img src="../assets/images/eventos_ejecutivos.jpg" alt="">
+              <div class="card-description">
+                <div class="card-title">
+                  <h4>Descripción</h4>
+                </div>
+                <div class="card-text">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum enim possimus dolorum non,
+                    modi
+                    sunt ips.</p>
+                </div>
+                <div class="card-link">
+                  <a href="#">Ver más</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="row">
+            <div class="col-lg-12 col-sm-12">
+              <img src="../assets/images/eventos_ejecutivos.jpg" alt="">
+              <div class="card-description">
+                <div class="card-title">
+                  <h4>Descripción</h4>
+                </div>
+                <div class="card-text">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum enim possimus dolorum non,
+                    modi
+                    sunt ips.</p>
+                </div>
+                <div class="card-link">
+                  <a href="#">Ver más</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="row">
+            <div class="col-lg-12 col-sm-12">
+              <img src="../assets/images/eventos_ejecutivos.jpg" alt="">
+              <div class="card-description">
+                <div class="card-title">
+                  <h4>Descripción</h4>
+                </div>
+                <div class="card-text">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum enim possimus dolorum non,
+                    modi
+                    sunt ips.</p>
+                </div>
+                <div class="card-link">
+                  <a href="#">Ver más</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="row">
+            <div class="col-lg-12 col-sm-12">
+              <img src="../assets/images/eventos_ejecutivos.jpg" alt="">
+              <div class="card-description">
+                <div class="card-title">
+                  <h4>Descripción</h4>
+                </div>
+                <div class="card-text">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum enim possimus dolorum non,
+                    modi
+                    sunt ips.</p>
+                </div>
+                <div class="card-link">
+                  <a href="#">Ver más</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+    </div>
+  </div>
 
+  <br>
+  <footer class="footer bg-light text-center text-white">
+    <!-- Grid container -->
+    <div class="p-12 pb-0" class="container1">
+      <!-- Section: Social media -->
+      <div class="mb-4 bg-secondary bg-opacity-75">
+        <div class="text-start p-3 text-white">
+          <div>
+            <!-- Facebook -->
+            <a class="btn text-white btn-floating m-1" style="background-color: #3b5998"
+              href="https://es-la.facebook.com/" role="button"><i class="bi bi-facebook"></i>
+            </a>
+
+            <!-- Twitter -->
+            <a class="btn text-white btn-floating m-1" style="background-color: #55acee"
+              href="https://twitter.com/?lang=es" role="button"><i class="bi bi-twitter"></i>
+            </a>
+
+            <!-- Google -->
+            <a class="btn text-white btn-floating m-1" style="background-color: #dd4b39"
+              href="https://www.google.com/?hl=es" role="button"><i class="bi bi-google"></i>
+            </a>
+
+            <!-- Instagram -->
+            <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac"
+              href="https://www.instagram.com/" role="button"><i class="bi bi-instagram"></i>
+            </a>
+
+            <!-- Linkedin -->
+            <a class="btn text-white btn-floating m-1" style="background-color: #0082ca" href="https://co.linkedin.com/"
+              role="button"><i class="bi bi-linkedin"></i>
+            </a>
+
+            <!-- Github -->
+            <a class="btn text-white btn-floating m-1" style="background-color: #333333" href="https://github.com/"
+              role="button"><i class="bi bi-github"></i>
+            </a>
+          </div>
+          © 2023
+        </div>
+      </div>
+      <!-- Section: Social media -->
     </div>
 
-    <br>
-    <footer class="footer bg-light text-center text-white">
-      <!-- Grid container -->
-      <div class="p-12 pb-0" class="container1">
-        <!-- Section: Social media -->
-        <div class="mb-4 bg-secondary bg-opacity-75">
-          <div class="text-start p-3 text-white">
-            <div>
-              <!-- Facebook -->
-              <a class="btn text-white btn-floating m-1" style="background-color: #3b5998"
-                href="https://es-la.facebook.com/" role="button"><i class="bi bi-facebook"></i>
-              </a>
-
-              <!-- Twitter -->
-              <a class="btn text-white btn-floating m-1" style="background-color: #55acee"
-                href="https://twitter.com/?lang=es" role="button"><i class="bi bi-twitter"></i>
-              </a>
-
-              <!-- Google -->
-              <a class="btn text-white btn-floating m-1" style="background-color: #dd4b39"
-                href="https://www.google.com/?hl=es" role="button"><i class="bi bi-google"></i>
-              </a>
-
-              <!-- Instagram -->
-              <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac"
-                href="https://www.instagram.com/" role="button"><i class="bi bi-instagram"></i>
-              </a>
-
-              <!-- Linkedin -->
-              <a class="btn text-white btn-floating m-1" style="background-color: #0082ca"
-                href="https://co.linkedin.com/" role="button"><i class="bi bi-linkedin"></i>
-              </a>
-
-              <!-- Github -->
-              <a class="btn text-white btn-floating m-1" style="background-color: #333333" href="https://github.com/"
-                role="button"><i class="bi bi-github"></i>
-              </a>
-            </div>
-            © 2023
-          </div>
-        </div>
-        <!-- Section: Social media -->
-      </div>
-
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-      crossorigin="anonymous"></script>
-
-    <script src="../lib/Js-page1.js" type="text/javascript"></script>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+    crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <script src="../lib/Js-page1.js" type="text/javascript"></script>
 </body>
 
 </html>
